[package]
name = "tcpws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
bytes = "1"
bytebuffer = "0.2.0"
futures = "0.3.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3.3" }
tokio-tungstenite = "*"
futures-util = "*"


